--- a/suppl/suppl04_world-1.html
+++ b/suppl/suppl04_world-1.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Zuguang Gu ( z.gu@dkfz.de )" />
 
-<meta name="date" content="2024-05-02" />
+<meta name="date" content="2024-05-07" />
 
 <title>Mutual influence between West-1 and World-2</title>
 
@@ -164,12 +164,12 @@ pre code {
 
 <h1 class="title toc-ignore">Mutual influence between West-1 and World-2</h1>
 <h4 class="author">Zuguang Gu ( <a href="mailto:z.gu@dkfz.de" class="email">z.gu@dkfz.de</a> )</h4>
-<h4 class="date">2024-05-02</h4>
+<h4 class="date">2024-05-07</h4>
 
 </div>
 
 
-<p>We load the data. <code>m</code> is the influence matrix between 72 countries. <code>mem</code> is the clustering results from the graph clustering analysis.</p>
+<p>We load the data. <code>m</code> is the influence matrix of 72 countries. <code>mem</code> is the clustering results from the graph clustering analysis.</p>
 <pre class="r"><code>library(ComplexHeatmap)
 library(circlize)
 
