--- a/suppl/suppl07_balance_China.html
+++ b/suppl/suppl07_balance_China.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Zuguang Gu ( z.gu@dkfz.de )" />
 
-<meta name="date" content="2024-05-07" />
+<meta name="date" content="2024-11-22" />
 
 <title>Citation balance of China</title>
 
@@ -164,7 +164,7 @@ pre code {
 
 <h1 class="title toc-ignore">Citation balance of China</h1>
 <h4 class="author">Zuguang Gu ( <a href="mailto:z.gu@dkfz.de" class="email">z.gu@dkfz.de</a> )</h4>
-<h4 class="date">2024-05-07</h4>
+<h4 class="date">2024-11-22</h4>
 
 </div>
 
@@ -223,7 +223,7 @@ x2 = x2[l]</code></pre>
 
     list(coefficients = c(intercept, slop), r2 = r2)
 }</code></pre>
-<p>Then for World-1, Asia-1, Mid-East and Europe-3, we fit a linear regression model on each country group.</p>
+<p>Then for World-1, Asia-1, Mid-East and Europe-3, we fit a linear regression model on each country group. Asia-2 is removed because there is no reliable fit.</p>
 <pre class="r"><code>max = 2
 pushViewport(viewport(xscale = c(-max, max), yscale = c(-max, max), width = unit(1, &quot;npc&quot;) - unit(1, &quot;cm&quot;), height = unit(1, &quot;npc&quot;) - unit(1, &quot;cm&quot;)))
 grid.rect(gp = gpar(fill = &quot;#EEEEEE&quot;, col = NA))
